@@ -34,6 +34,7 @@
 0.61685027506808491367715568749225944596*x^-2 + 1.01511996319472488016374193
 63106928091*x^-1 + O(x^0)
 1.0000000000000000000000000000000000000*x^-1 + O(x^0)
+0.72399875382322394120054853672842760345*x^-1 + O(x^0)
 246.96037648704266640450758953126840719
 1.00000000000000000000000000000000000000000000000000000*x^-1 + O(x^0)
 4.59057737496905265921181053582421504989219703475223909 - 3.1894012475791441
@@ -251,4 +252,4 @@ check all formats
 -126
 [1, -127]
 1.6449340668482264364724151666460251892
-Total time spent: 7482
+Total time spent: 5684
