@@ -35,6 +35,7 @@ BA 14- [libpari] FqX_nbfact did not work
 BA 25- fflog could crash in char 2. [from 2.8.0]
 JD 26- is_universal_constant() made (possibly wrong) assumptions about memory
        layout (gen_0 < ghalf)
+BA 27- lfundiv(L1,L2): division by 0 if L2[6] (rootno) is 0.
 
   Added
     1- permtonum: allow t_VECSMALL input
